Deploy base image configuration
Base image contains most generic dependencies - currently only ansible.

This commit contains:
* OpenShift cronjob configuration
* secret with DockerHub webhook to trigger build
* Makefile target to deploy it into OpenShift
* Documentation (+ small improvements to unrelated parts)

Apply suggestions from code review

Co-authored-by: Hunor Csomortáni <csomortani.hunor@gmail.com>

--- a/containers/Dockerfile.base
+++ b/containers/Dockerfile.base
@@ -1,3 +1,6 @@
+# Be aware that this image is used for all stages, so if a dependency is removed be sure that it is
+# not required in anywhere
+
 FROM fedora:31
 
 ENV LANG=en_US.UTF-8 \
